<resources>
    <string name="app_name">Hungarian train delays</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_prediction">Prediction</string>
    <string name="title_stats">Statistics</string>
    <string name="title_about">About</string>
    <string name="generic_error">An error occured during the loading of data.</string>

    <string name="monthly_mean_delays">Monthly mean delays - 2023</string>
    <string name="total_delays">Total delay per month - 2023</string>
    <string name="highest_delays">Highest delays</string>
    <string name="mean_delays_per_route">Mean delays per route</string>
    <string name="predict_title">Delay prediction</string>
    <string name="show_delays">Show delays</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="pick_date">Pick date</string>
    <string name="select_train_to_predict">Select train to predict</string>
    <string name="selected_date">Selected date:</string>
    <string name="prediction_result_title">Prediction results</string>
    <string name="prediction_result_info_title">Train info</string>
    <string name="about_title">About us</string>
    <string name="most_probable_cause_of_delay">Most probable cause of delay:</string>
    <string name="another_prediction">Another prediction</string>
    <string name="selected_date_is_invalid">Can\'t select dates from the past for prediction</string>
    <string name="first_paragraph">As frequent users of public transport systems, we find delays inconvenient. However delays are to some degree unavoidable. No system can operate without mistakes, let alone one that spans a whole country with countless physical locations. Inherent difficulties aside, we have noticed patterns in these delays, just by using them frequently. This got us wandering if we could avoid the routes or trains that are consistently delayed. This lead us on a journey to create a model that could predict these delays.</string>
    <string name="second_paragraph">To develop the model, we had to dig deep into the data, which gave us unique insight into the realities of train delays. We decided to incorporate some of these enlightening statistics into our application. Although our initial motivation was selfish, we hope to provide our users (and maybe even the infrastructure operators) these same insights, to better understand the problems and hopefully be able to identify the potential weak points of the system.</string>
    <string name="contributors_label">Contributors:</string>
    <string name="adam_kapus">Ádám Kapus</string>
    <string name="martin_lenyi">Martin Lényi</string>
    <string name="mate_debreczeni">Máté Debreczeni</string>
    <string name="open_source">This project is open source, you can find the source code:</string>

    <string name="adamkapus_github_link"><a href="https://www.github.com/adamkapus">@adamkapus</a></string>
    <string name="martin_lenyi_github_link"><a href="https://www.github.com/tuku13">@tuku13</a></string>
    <string name="mate_debreczeni_github_link"><a href="https://www.github.com/jazzysnake">@jazzysnake</a></string>
    <string name="open_source_link"><a href="https://github.com/HUNTD-Ai/hungarian-train-delays/">here</a></string>
    <string name="experiencing_delays">Experiencing delays:</string>
    <string name="departure_time">Departure time:</string>
    <string name="arrival_time">Arrival time:</string>
    <string name="route">Route:</string>
    <string name="train_number">Train number:</string>
    <string name="departure">Departure:</string>
    <string name="arrival">Arrival:</string>
    <string name="duration">Duration:</string>
    <string name="predict">Predict</string>

    <string-array name="time_period_array">
        <item>Past week</item>
        <item>Past month</item>
    </string-array>

</resources>
