<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.about.AboutFragment">

        <TextView
            android:id="@+id/title_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultLayoutMargin"
            android:text="@string/about_title"
            android:textSize="@dimen/statsTitleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/first_paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultLayoutMargin"
            android:text="@string/first_paragraph"
            android:textSize="@dimen/mediumText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_about" />

        <TextView
            android:id="@+id/second_paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultLayoutMargin"
            android:text="@string/second_paragraph"
            android:textSize="@dimen/mediumText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_paragraph" />

        <LinearLayout
            android:id="@+id/contributorsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultLayoutMargin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_paragraph">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/smallLayoutMargin"
                android:text="@string/contributors_label"
                android:textSize="@dimen/mediumText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smallLayoutMargin"
                    android:text="@string/adam_kapus"
                    android:textSize="@dimen/mediumText" />

                <TextView
                    android:id="@+id/adamkapus_github_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smallLayoutMargin"
                    android:text="@string/adamkapus_github_link"
                    android:textSize="@dimen/mediumText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smallLayoutMargin"
                    android:text="@string/martin_lenyi"
                    android:textSize="@dimen/mediumText" />

                <TextView
                    android:id="@+id/martin_lenyi_github_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smallLayoutMargin"
                    android:text="@string/martin_lenyi_github_link"
                    android:textSize="@dimen/mediumText" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smallLayoutMargin"
                    android:text="@string/mate_debreczeni"
                    android:textSize="@dimen/mediumText" />

                <TextView
                    android:id="@+id/mate_debreczeni_github_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smallLayoutMargin"
                    android:text="@string/mate_debreczeni_github_link"
                    android:textSize="@dimen/mediumText" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/openSourceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/smallLayoutMargin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contributorsLayout">

            <TextView
                android:id="@+id/open_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/smallLayoutMargin"
                android:text="@string/open_source"
                android:textSize="@dimen/mediumText" />

            <TextView
                android:id="@+id/open_source_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/smallLayoutMargin"
                android:text="@string/open_source_link"
                android:textSize="@dimen/mediumText" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>